# voteaire-ballot-counter

./: .gitignore  .pre-commit-config.yaml  README.md  codecov.yml  dev-requirements.txt  docker-compose.yml  flow.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml  dev_cd.yml  dev_cov.yml  production.yml  testnet_cd.yml
docker/: api.Dockerfile  chain.Dockerfile  pg.Dockerfile
docker/initialization/: setup_db.sh
node/: docker-compose.yml  run_node.sh
src/: app.py  chain-worker.py  config_requirements.txt  dotenv.sample  initialize_configs.py  submitter-worker.py  utils.py  uwsgi.ini  weight-worker.py
src/api/: health.py
src/lib/: backup_snapshotter_utils.py  blockchain_utils.py  cache.py  config_utils.py  metadata_utils.py  processor_utils.py  schema_validator.py  signature_utils.py  snapshotter_utils.py
src/lib/mock/: config_utils.py  (+1 more)
src/meta/: metadata_processor.py
src/model/: __init__.py  blockfrost_queue.py  choice.py  config.py  processed_log.py  proposal.py  question.py  vote.py  vote_choice.py
src/openapi/: openapi-spec.yml
src/workers/: __init__.py  chain.py  submitter.py  weight.py
tests/integration/: requirements.txt  test_proposal_end2end.py  test_vote_end2end.py  test_weight_worker.py
tests/test_utils/: __init__.py  fake_proposal.py  fake_vote.py  safe_add.py
tests/unit/: __init__.py
tf/: .terraform.lock.hcl  main.tf  networking.tf  terraform.tfstate  variables.tf
tf/container-definitions/: container-definition-api.json  container-definition-chain-worker.json  container-definition-weight-worker.json
(+63 files in other folders)
